# aspectt-app

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MANUAL_CHECK_NOTES.md  MANUAL_CHECK_TODO.md  METHODOLOGY.md  PIPELINE_ISSUES_PLAN.md  PIPELINE_ISSUES_TODO.md  README.md  appgarden.toml  pyproject.toml  run.sh
aspectt-backend/: main.py  pyproject.toml
aspectt-pipeline/: manual_overrides.json  nblite.toml  pyproject.toml  run_pipeline.sh
aspectt-pipeline/_dev/00_data_download/: bls_crosswalk.xls  bls_crosswalk.xlsx  bls_isco.xls
aspectt-pipeline/aspectt_pipeline/: const.py  crosswalk.py  postprocess.py  refine.py  translate.py
aspectt-pipeline/data/uk_onet/: crosswalk.json  element_descriptions.json
aspectt-pipeline/data/uk_onet/occupations/: 1111.json  1112.json  1121.json  1122.json  1123.json  1131.json  1132.json  1133.json  1134.json  1135.json  1136.json  1137.json  1139.json  1140.json  1150.json  1161.json  1162.json  1163.json  1171.json  1172.json  1211.json  1212.json  1221.json  1222.json  1223.json  1224.json  1225.json  1231.json  1232.json  1233.json  1241.json  1242.json  1243.json  1251.json  1252.json  1253.json  1254.json  1255.json  1256.json  1257.json  (+372 more)
aspectt-pipeline/data/uk_onet_unrefined/: occupation_index.json
aspectt-pipeline/data/uk_onet_unrefined/occupations/: 1111.json  1112.json  1121.json  1122.json  1123.json  (+406 more)
aspectt-pipeline/nbs/: const.ipynb  crosswalk.ipynb  postprocess.ipynb  refine.ipynb  translate.ipynb
aspectt-pipeline/pts/: const.pct.py  crosswalk.pct.py  postprocess.pct.py  refine.pct.py  translate.pct.py
(+28 files in other folders)
